// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewSecretDetails SSH Secret 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      style="width: 60%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            overview
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              name
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                abhi-ssh1
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              description
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                desc
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              identifier
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                abhissh1
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            Credentials
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.labelType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                <span>
                  secrets.typeSSH
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              authentication
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                SSH
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              credType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                <span>
                  secrets.sshAuthFormFields.optionKey
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              username
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                abhinav
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.sshAuthFormFields.labelKeyReference
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                account.abhifile2
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.sshAuthFormFields.labelPassphrase
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                account.abhitest1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--border-color-grey300 StyledProps--padding-left-xxxlarge"
      style="width: 40%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
        >
          <span
            class="name"
          >
            Connector created
          </span>
          <span
            class="value"
          >
            10/12/2020 02:26 pm
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
        >
          <span
            class="name"
          >
            Last updated
          </span>
          <span
            class="value"
          >
            10/12/2020 02:26 pm
          </span>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main formData"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  secrets.createSSHCredWizard.hostnameInfo
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    common.smtp.testConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewSecretDetails Text Secret 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      style="width: 60%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            overview
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              name
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                abhi-test-1
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              description
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                asd
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              identifier
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                abhitest1
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            Credentials
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.labelType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                <span>
                  secrets.secret.labelText
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.labelValue
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey350"
              >
                encrypted
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.labelSecretsManager
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                Vault1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewSecretDetails WinRm Secret Kerberos 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      style="width: 60%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            overview
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              name
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                dummy name
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              description
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                dummy description
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              identifier
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                dummy_name
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            Credentials
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.labelType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                <span>
                  secrets.typeWinRM
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              authentication
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                Kerberos
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.sshAuthFormFields.labelPrincipal
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                principal name
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.sshAuthFormFields.labelRealm
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                realm
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              common.useSSL
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.skipCertCheck
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.useNoProfile
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.labelWinRmPort
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                5985
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--border-color-grey300 StyledProps--padding-left-xxxlarge"
      style="width: 40%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
      />
      <div
        class="StyledProps--font StyledProps--main formData"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  secrets.createSSHCredWizard.hostnameInfo
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    common.smtp.testConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewSecretDetails WinRm Secret NTLM 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      style="width: 60%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            overview
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              name
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                dummy name
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              description
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                dummy description
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              identifier
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                dummy_name
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main detailsSection renderDetails"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
          >
            Credentials
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.labelType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                <span>
                  secrets.typeWinRM
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              authentication
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                NTLM
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.domain
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                domain
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              username
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                user name
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              common.useSSL
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.skipCertCheck
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.useNoProfile
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small"
            >
              secrets.winRmAuthFormFields.labelWinRmPort
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
              >
                5985
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--border-color-grey300 StyledProps--padding-left-xxxlarge"
      style="width: 40%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
        >
          <span
            class="name"
          >
            Connector created
          </span>
          <span
            class="value"
          >
            10/12/2020 02:26 pm
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
        >
          <span
            class="name"
          >
            Last updated
          </span>
          <span
            class="value"
          >
            10/12/2020 02:26 pm
          </span>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main formData"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  secrets.createSSHCredWizard.hostnameInfo
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    common.smtp.testConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
